# prover

./: .gitignore  CMakeLists.txt  README.md
include/: formula.h  function.h  predicate.h  proof.h  term.h  theory.h
src/cpp/: formula.cpp  function.cpp  predicate.cpp  proof.cpp  term.cpp  theory.cpp
test/src/cpp/: main.cpp
